# Raven

./: .gitignore  CMakeLists.txt  notes.txt
include/: hello.h  jewels_and_stones.h  raven.h
src/: jewels_and_stones.cpp
src/main/: hello_main.cpp  jewels_and_stones_main.cpp
src/sandbox/: hello.cpp  jewels_and_stones.cpp
test/: hello_test.cpp  jewels_and_stones_test.cpp
